Change fixed height of 100vh to minimum height
Previously, when viewing the website on narrow displays/windows
some content was cut off and scrolling disabled. This has been
fixed by changing the body height property to minimum-height.

Added some bottom margin to the playercount banner so there is
some space below it on narrow displays.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -17,7 +17,7 @@ body {
 
 html, body {
 	width: 100vw;
-	height: 100vh;
+	min-height: 100vh;
 	overflow-x: hidden;
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -88,7 +88,7 @@ p {
 
 .playercount {
 	display: inline-block;
-	margin: 20px 15px 0 15px;
+	margin: 20px 15px 15px 15px;
 	padding: 2px 0;
 	background-color: rgba(15, 199, 209, 0.75);
 	font-size: 1em;
